testing/framework/resources/Advanced/Failing/mondrian/null/query6123.e
Supermarket	Store 10	34791
Gourmet Supermarket	Store 4	23759
Mid-Size Grocery	Store 18	38382
Mid-Size Grocery	Store 23	\N
Supermarket	Store 7	23598
Small Grocery	Store 22	\N
HeadQuarters	HQ	\N
Supermarket	Store 11	20319
Small Grocery	Store 14	22478
Gourmet Supermarket	Store 6	23688
Mid-Size Grocery	Store 9	36509
Mid-Size Grocery	Store 20	34452
Supermarket	Store 16	30268
Deluxe Supermarket	Store 17	33858
Deluxe Supermarket	Store 19	23112
Supermarket	Store 1	23593
Supermarket	Store 24	\N
Supermarket	Store 15	21215
Deluxe Supermarket	Store 8	30797
Deluxe Supermarket	Store 21	\N
Small Grocery	Store 2	28206
Small Grocery	Store 5	24597
Supermarket	Store 3	39696
Deluxe Supermarket	Store 13	27694
Deluxe Supermarket	Store 12	30584
